--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         </div>
       <div>
-        <img class="header-img" style="height: 300px; width: 300px; padding-left: 10px; border-radius: 5px;" src="https://source.unsplash.com/random/300*300/?fashion" alt="">
+        <img class="header-imgg" style="height: 300px; width: 300px; padding-left: 10px; border-radius: 5px;" src="https://source.unsplash.com/random/300*300/?fashion" alt="">
       </div>
       </div>
       <!--service-->
